[package]
name = "cnidarium"
version = "0.82.1"
authors = [
  "Penumbra Labs <team@penumbralabs.xyz>",
  "Henry de Valence <hdevalence@penumbralabs.xyz>",
  "Erwan Or <erwanor@penumbralabs.xyz>"
]
edition = "2021"
license = "MIT"
description = "A fast and verifiable storage layer for blockchains"
repository = "https://github.com/penumbra-zone/cnidarium"
homepage = "https://github.com/penumbra-zone/cnidarium"
documentation = "https://docs.rs/cnidarium"

[features]
migration = []
migration-proptests = ["migration"]
default = ["metrics"]
rpc = ["proto"]
proto = ["dep:tonic", "dep:prost", "dep:serde", "dep:pbjson", "dep:ibc-proto"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
base64 = "0.21.7"
borsh = { version = "1.3.0" , features = ["derive", "de_strict_order"]}
futures = "0.3.30"
hex = "0.4.3"
ibc-proto = { version = "0.51.1", default-features = false, features = ["serde"], optional = true }
ibc-types = { version = "0.15.0", default-features = false, features = ["std"] }
ics23 = "0.12.0"
jmt = { version = "0.11", features = ["migration"] }
metrics = { version = "0.24", optional = true }
once_cell = "1.19.0"
parking_lot = "0.12.3"
pbjson = { version = "0.7", optional = true }
pin-project = "1.1.5"
prost = { version = "0.13.3", optional = true }
regex = "1.10.5"
rocksdb = "0.21"
serde = { version = "1", optional = true}
sha2 = "0.10"
smallvec = { version = "1.10", features = ["union", "const_generics"] }
tempfile = "3.10.1"
tendermint = { version = "0.40.0", default-features = false }
tokio = { version = "1.38", features = ["full", "tracing"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12.3", optional = true }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10.1"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38", features = ["full", "rt-multi-thread"] }
proptest = "1.3.1"
test-strategy = "0.3.1"
